--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
+/* @tailwind base; */
+@tailwind components;
+@tailwind utilities;
 
+html {
+    background-color: #021d38;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+body {
+    margin: 0px;
+}
